@@ -6,16 +6,6 @@ java.sourceCompatibility = JavaVersion.VERSION_17
 java.targetCompatibility = JavaVersion.VERSION_17
 
 dependencies {
-    implementation(libs.springboot.base)
+    implementation(libs.slf4j.simple)
     testImplementation(libs.springboot.test)
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
-}
-tasks.withType<Test> {
-    jvmArgs("--enable-preview")
-}
-tasks.withType<JavaExec> {
-    jvmArgs("--enable-preview")
 }
